--- a/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
+++ b/k8s/helm/charts/wealist-monitoring/templates/prometheus/deployment.yaml
@@ -55,6 +55,14 @@ spec:
             {{- else }}
             - "--web.route-prefix=/"
             {{- end }}
+            {{- if .Values.prometheus.remoteWriteReceiver.enabled }}
+            # Remote Write Receiver (Tempo Metrics Generator → Prometheus)
+            - "--web.enable-remote-write-receiver"
+            {{- end }}
+            {{- if .Values.prometheus.exemplarStorage.enabled }}
+            # Exemplar Storage (Metrics → Traces 연결)
+            - "--enable-feature=exemplar-storage"
+            {{- end }}
           ports:
             - name: http
               containerPort: 9090
