--- a/.github/workflows/discord-update-production-image.yml
+++ b/.github/workflows/discord-update-production-image.yml
@@ -3,18 +3,10 @@ name: Discord Update Production Image Tag
 on:
   workflow_dispatch:
     inputs:
-      service:
-        description: 'Service name'
+      services:
+        description: 'Service names (comma-separated, e.g., auth-service,board-service)'
         required: true
-        type: choice
-        options:
-          - auth-service
-          - board-service
-          - chat-service
-          - noti-service
-          - storage-service
-          - user-service
-          - video-service
+        type: string
       image_tag:
         description: 'Image tag to deploy (e.g., 42-abc1234)'
         required: true
@@ -41,26 +33,41 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_BACKEND }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: List recent prod images
+      - name: List and verify images for all services
         run: |
-          echo "### 📦 Recent Images for prod/${{ inputs.service }}" >> $GITHUB_STEP_SUMMARY
+          IFS=',' read -ra SERVICES <<< "${{ inputs.services }}"
+          
+          echo "### 📦 Image Verification" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          aws ecr describe-images \
-            --repository-name "prod/${{ inputs.service }}" \
-            --region ${{ env.AWS_REGION }} \
-            --query 'sort_by(imageDetails,& imagePushedAt)[-10:].[imageTags[0],imagePushedAt]' \
-            --output table >> $GITHUB_STEP_SUMMARY || echo "No images found"
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-
-      - name: Verify selected image exists
-        run: |
-          echo "Verifying image: prod/${{ inputs.service }}:${{ inputs.image_tag }}"
-          aws ecr describe-images \
-            --repository-name "prod/${{ inputs.service }}" \
-            --region ${{ env.AWS_REGION }} \
-            --image-ids imageTag=${{ inputs.image_tag }}
-          echo "✅ Image verified"
+          
+          for SERVICE in "${SERVICES[@]}"; do
+            SERVICE=$(echo "$SERVICE" | xargs)  # trim whitespace
+            echo "#### Service: $SERVICE" >> $GITHUB_STEP_SUMMARY
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+            
+            # 최근 이미지 목록
+            echo "Recent images:" >> $GITHUB_STEP_SUMMARY
+            aws ecr describe-images \
+              --repository-name "prod/$SERVICE" \
+              --region ${{ env.AWS_REGION }} \
+              --query 'sort_by(imageDetails,& imagePushedAt)[-5:].[imageTags[0],imagePushedAt]' \
+              --output table >> $GITHUB_STEP_SUMMARY || echo "No images found"
+            
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            
+            # 선택한 이미지 검증
+            echo "Verifying image: prod/$SERVICE:${{ inputs.image_tag }}"
+            if aws ecr describe-images \
+              --repository-name "prod/$SERVICE" \
+              --region ${{ env.AWS_REGION }} \
+              --image-ids imageTag=${{ inputs.image_tag }} > /dev/null 2>&1; then
+              echo "✅ $SERVICE: Image verified"
+            else
+              echo "❌ $SERVICE: Image not found"
+              exit 1
+            fi
+          done
 
   update-manifest:
     needs: list-available-images
@@ -86,95 +93,124 @@ jobs:
           git fetch origin k8s-deploy-prod
           git checkout k8s-deploy-prod
 
-      - name: Update ArgoCD Application manifest
+      - name: Update ArgoCD Application manifests
+        id: update_manifests
         run: |
-          SERVICE="${{ inputs.service }}"
+          IFS=',' read -ra SERVICES <<< "${{ inputs.services }}"
           TAG="${{ inputs.image_tag }}"
           
-          # ArgoCD Application manifest 경로
-          MANIFEST="k8s/argocd/apps/prod/${SERVICE}.yaml"
+          UPDATED_SERVICES=""
+          FAILED_SERVICES=""
           
-          if [ ! -f "$MANIFEST" ]; then
-            echo "❌ Manifest file not found: ${MANIFEST}"
-            exit 1
-          fi
-          
-          echo "📝 Updating ${MANIFEST}"
-          echo "New tag: ${TAG}"
-          
-          # image.tag 파라미터만 업데이트
-          sed -i.bak '/- name: image\.tag/{n;s|value: ".*"|value: "'"${TAG}"'"|}' "$MANIFEST"
-          rm -f "${MANIFEST}.bak"
-          
-          echo ""
-          echo "=== Updated section ==="
-          grep -A 1 "name: image.tag" "$MANIFEST"
-          echo "======================="
-          echo ""
+          for SERVICE in "${SERVICES[@]}"; do
+            SERVICE=$(echo "$SERVICE" | xargs)  # trim whitespace
+            
+            # ArgoCD Application manifest 경로
+            MANIFEST="k8s/argocd/apps/prod/${SERVICE}.yaml"
+            
+            if [ ! -f "$MANIFEST" ]; then
+              echo "❌ Manifest file not found: ${MANIFEST}"
+              FAILED_SERVICES="${FAILED_SERVICES}${SERVICE} "
+              continue
+            fi
+            
+            echo "📝 Updating ${MANIFEST}"
+            echo "New tag: ${TAG}"
+            
+            # image.tag 파라미터만 업데이트
+            sed -i.bak '/- name: image\.tag/{n;s|value: ".*"|value: "'"${TAG}"'"|}' "$MANIFEST"
+            rm -f "${MANIFEST}.bak"
+            
+            echo ""
+            echo "=== Updated section for ${SERVICE} ==="
+            grep -A 1 "name: image.tag" "$MANIFEST"
+            echo "======================================="
+            echo ""
+            
+            UPDATED_SERVICES="${UPDATED_SERVICES}${SERVICE} "
+          done
           
           # 전체 변경사항 확인
-          git diff "$MANIFEST"
+          echo "📋 All changes:"
+          git diff
+          
+          # 결과를 output으로 저장
+          echo "updated_services=${UPDATED_SERVICES}" >> $GITHUB_OUTPUT
+          echo "failed_services=${FAILED_SERVICES}" >> $GITHUB_OUTPUT
+          
+          if [ -n "$FAILED_SERVICES" ]; then
+            echo "⚠️ Some services failed to update: ${FAILED_SERVICES}"
+          fi
 
       - name: Create PR or commit
+        id: create_pr
         env:
           GH_TOKEN: ${{ secrets.GITOPS_PAT || github.token }}
         run: |
-          SERVICE="${{ inputs.service }}"
           TAG="${{ inputs.image_tag }}"
+          UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
+          SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
           
           if [ "${{ inputs.create_pr }}" = "true" ]; then
-            BRANCH_NAME="deploy/${SERVICE}-${TAG}-$(date +%s)"
+            BRANCH_NAME="deploy/multi-service-${TAG}-$(date +%s)"
             
             # 새 브랜치 생성
             git checkout -b "$BRANCH_NAME"
             git add .
-            git commit -m "🚀 [PROD] Deploy ${SERVICE} - ${TAG}"
+            
+            # 커밋 메시지 생성
+            if [ $SERVICE_COUNT -eq 1 ]; then
+              git commit -m "🚀 [PROD] Deploy ${UPDATED_SERVICES// /} - ${TAG}"
+            else
+              git commit -m "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}
+
+          Services:
+          $(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- /')"
+            fi
+            
             git push origin "$BRANCH_NAME"
             
-            # PR body를 heredoc으로 저장
-            PR_BODY=$(cat <<'EOF'
-          ## Production Deployment Request
-          
-          **Service:** SERVICE_PLACEHOLDER  
-          **Image Tag:** TAG_PLACEHOLDER  
-          **ECR Image:** prod/SERVICE_PLACEHOLDER:TAG_PLACEHOLDER  
-          **Manifest:** k8s/argocd/apps/prod/SERVICE_PLACEHOLDER.yaml
-          
-          ### Pre-deployment Checklist
-          - [ ] Dev/Staging 테스트 완료
-          - [ ] 성능 및 리소스 검토 완료
-          - [ ] 팀원 승인 완료
-          
-          ### Deployment Steps
-          1. 이 PR 리뷰 및 승인
-          2. PR Merge
-          3. ArgoCD UI에서 **SERVICE_PLACEHOLDER-prod** 애플리케이션의 **Sync** 버튼 클릭
-          4. 배포 모니터링 (Discord 알림 확인)
-          
-          ---
-          ⚠️ **주의**: 자동 배포되지 않습니다. ArgoCD에서 수동 Sync 필요
-          
-          Requested by: @ACTOR_PLACEHOLDER via Discord Bot
-          EOF
-          )
+            # PR body 생성
+            PR_BODY="## Production Deployment Request
+
+**Image Tag:** \`${TAG}\`  
+**Services:** ${SERVICE_COUNT}
+
+### Services to Deploy
+$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- **/' | sed 's/$/**/')
+
+### Updated Manifests
+$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed "s|^|- \`k8s/argocd/apps/prod/|" | sed 's|$|.yaml`|')
+
+### Pre-deployment Checklist
+- [ ] Dev/Staging 테스트 완료
+- [ ] 성능 및 리소스 검토 완료
+- [ ] 팀원 승인 완료
+
+### Deployment Steps
+1. 이 PR 리뷰 및 승인
+2. PR Merge
+3. ArgoCD UI에서 각 애플리케이션의 **Sync** 버튼 클릭:
+$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/   - **/' | sed 's/$/-prod**/')
+4. 배포 모니터링 (Discord 알림 확인)
+
+---
+⚠️ **주의**: 자동 배포되지 않습니다. ArgoCD에서 수동 Sync 필요
+
+Requested by: @${{ github.triggering_actor }} via Discord Bot"
             
-            # Placeholder 치환
-            PR_BODY="${PR_BODY//SERVICE_PLACEHOLDER/$SERVICE}"
-            PR_BODY="${PR_BODY//TAG_PLACEHOLDER/$TAG}"
-            PR_BODY="${PR_BODY//ACTOR_PLACEHOLDER/${{ github.triggering_actor }}}"
-            
-            # PR 생성 (--json 플래그 제거)
+            # PR 생성
             gh pr create \
-              --title "🚀 [PROD] Deploy ${SERVICE} - ${TAG}" \
+              --title "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}" \
               --body "$PR_BODY" \
               --base k8s-deploy-prod \
               --head "$BRANCH_NAME"
             
-            # PR URL 가져오기 (다른 방법 사용)
+            # PR URL 가져오기
             PR_URL="https://github.com/${{ github.repository }}/pull/$(gh pr list --head $BRANCH_NAME --json number --jq '.[0].number')"
             
             echo "✅ PR created: ${PR_URL}"
-            echo "PR_URL=${PR_URL}" >> $GITHUB_OUTPUT
+            echo "pr_url=${PR_URL}" >> $GITHUB_OUTPUT
             
             echo ""
             echo "### 🔗 Next Steps" >> $GITHUB_STEP_SUMMARY
@@ -182,15 +218,16 @@ jobs:
             echo "2. Merge after approval" >> $GITHUB_STEP_SUMMARY
             echo "3. Sync in ArgoCD" >> $GITHUB_STEP_SUMMARY
           else
-            # 직접 커밋 (비권장)
+            # 직접 커밋
             git add .
-            git commit -m "🚀 [PROD] Deploy ${SERVICE} - ${TAG}
+            git commit -m "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}
 
-          Updated by: ${{ github.triggering_actor }} via Discord Bot
-          Manual deployment trigger"
+Services:
+$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- /')
+
+Updated by: ${{ github.triggering_actor }} via Discord Bot"
             git push origin k8s-deploy-prod
             echo "⚠️ Changes pushed directly to k8s-deploy-prod"
-            echo "Go to ArgoCD and manually sync ${SERVICE}-prod"
           fi
 
       - name: Send Discord notification
@@ -199,24 +236,27 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
           if [ -n "$DISCORD_WEBHOOK" ]; then
-            PR_URL="${{ steps.update-manifest.outputs.PR_URL }}"
+            PR_URL="${{ steps.create_pr.outputs.pr_url }}"
+            UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
+            SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
+            SERVICE_LIST=$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/• /' | sed 's/$/\\n/' | tr -d '\n')
             
             curl -H "Content-Type: application/json" \
               -X POST \
               -d '{
                 "embeds": [{
                   "title": "📦 Production Deployment PR Created",
-                  "description": "New production deployment PR has been created and is ready for review.",
+                  "description": "New production deployment PR has been created for '"${SERVICE_COUNT}"' service(s).",
                   "color": 3447003,
                   "fields": [
                     {
-                      "name": "🔧 Service",
-                      "value": "'"${{ inputs.service }}"'",
-                      "inline": true
+                      "name": "🔧 Services",
+                      "value": "'"${SERVICE_LIST}"'",
+                      "inline": false
                     },
                     {
                       "name": "🏷️ Image Tag", 
-                      "value": "'"${{ inputs.image_tag }}"'",
+                      "value": "`'"${{ inputs.image_tag }}"'`",
                       "inline": true
                     },
                     {
@@ -248,16 +288,20 @@ jobs:
 
       - name: Deployment summary
         run: |
+          UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
+          SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
+          
           echo "## 🚀 Production Image Tag Update" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Service:** ${{ inputs.service }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Services Updated:** ${SERVICE_COUNT}" >> $GITHUB_STEP_SUMMARY
           echo "**New Image Tag:** ${{ inputs.image_tag }}" >> $GITHUB_STEP_SUMMARY
-          echo "**ECR Image:** \`prod/${{ inputs.service }}:${{ inputs.image_tag }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Manifest:** \`k8s/argocd/apps/prod/${{ inputs.service }}.yaml\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Updated Services:" >> $GITHUB_STEP_SUMMARY
+          echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- **/' | sed 's/$/**/' >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📋 Next Steps:" >> $GITHUB_STEP_SUMMARY
           echo "1. ✅ Review and merge the PR" >> $GITHUB_STEP_SUMMARY
           echo "2. 🔄 Go to ArgoCD UI" >> $GITHUB_STEP_SUMMARY
-          echo "3. 🎯 Find **${{ inputs.service }}-prod** application" >> $GITHUB_STEP_SUMMARY
-          echo "4. 🚀 Click **Sync** button" >> $GITHUB_STEP_SUMMARY
-          echo "5. 👀 Monitor deployment" >> $GITHUB_STEP_SUMMARY
+          echo "3. 🎯 Find and sync each service:" >> $GITHUB_STEP_SUMMARY
+          echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/   - **/' | sed 's/$/-prod**/' >> $GITHUB_STEP_SUMMARY
+          echo "4. 👀 Monitor deployment" >> $GITHUB_STEP_SUMMARY
