--- a/.github/workflows/discord-update-production-image.yaml
+++ b/.github/workflows/discord-update-production-image.yaml
@@ -4,9 +4,10 @@ on:
   workflow_dispatch:
     inputs:
       services:
-        description: 'Service names (comma-separated, e.g., auth-service,board-service)'
+        description: 'Services to update (comma-separated, e.g., auth-service,board-service or "all" for all services)'
         required: true
         type: string
+        default: 'all'
       image_tag:
         description: 'Image tag to deploy (e.g., 42-abc1234)'
         required: true
@@ -26,45 +27,60 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    outputs:
+      services_to_update: ${{ steps.parse-services.outputs.services }}
     steps:
+      - name: Parse services input
+        id: parse-services
+        run: |
+          ALL_SERVICES="auth-service,board-service,chat-service,noti-service,storage-service,user-service,video-service"
+          
+          if [ "${{ inputs.services }}" = "all" ]; then
+            SERVICES="$ALL_SERVICES"
+          else
+            SERVICES="${{ inputs.services }}"
+          fi
+          
+          echo "services=$SERVICES" >> $GITHUB_OUTPUT
+          echo "Services to update: $SERVICES"
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_BACKEND }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: List and verify images for all services
+      - name: List recent prod images and verify
         run: |
-          IFS=',' read -ra SERVICES <<< "${{ inputs.services }}"
+          IFS=',' read -ra SERVICES_ARRAY <<< "${{ steps.parse-services.outputs.services }}"
           
-          echo "### 📦 Image Verification" >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 Recent Images and Verification" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          for SERVICE in "${SERVICES[@]}"; do
-            SERVICE=$(echo "$SERVICE" | xargs)  # trim whitespace
-            echo "#### Service: $SERVICE" >> $GITHUB_STEP_SUMMARY
+          for service in "${SERVICES_ARRAY[@]}"; do
+            service=$(echo "$service" | xargs) # trim whitespace
+            echo "#### Service: $service" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
             
-            # 최근 이미지 목록
-            echo "Recent images:" >> $GITHUB_STEP_SUMMARY
+            # List recent images
             aws ecr describe-images \
-              --repository-name "prod/$SERVICE" \
+              --repository-name "prod/$service" \
               --region ${{ env.AWS_REGION }} \
               --query 'sort_by(imageDetails,& imagePushedAt)[-5:].[imageTags[0],imagePushedAt]' \
-              --output table >> $GITHUB_STEP_SUMMARY || echo "No images found"
+              --output table >> $GITHUB_STEP_SUMMARY || echo "No images found for $service" >> $GITHUB_STEP_SUMMARY
             
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             
-            # 선택한 이미지 검증
-            echo "Verifying image: prod/$SERVICE:${{ inputs.image_tag }}"
+            # Verify selected image exists
+            echo "Verifying image: prod/$service:${{ inputs.image_tag }}"
             if aws ecr describe-images \
-              --repository-name "prod/$SERVICE" \
+              --repository-name "prod/$service" \
               --region ${{ env.AWS_REGION }} \
               --image-ids imageTag=${{ inputs.image_tag }} > /dev/null 2>&1; then
-              echo "✅ $SERVICE: Image verified"
+              echo "✅ Image verified for $service"
             else
-              echo "❌ $SERVICE: Image not found"
+              echo "❌ Image not found for $service: prod/$service:${{ inputs.image_tag }}"
               exit 1
             fi
           done
@@ -94,23 +110,21 @@ jobs:
           git checkout k8s-deploy-prod
 
       - name: Update ArgoCD Application manifests
-        id: update_manifests
+        id: update-manifest
         run: |
-          IFS=',' read -ra SERVICES <<< "${{ inputs.services }}"
+          IFS=',' read -ra SERVICES_ARRAY <<< "${{ needs.list-available-images.outputs.services_to_update }}"
           TAG="${{ inputs.image_tag }}"
           
           UPDATED_SERVICES=""
-          FAILED_SERVICES=""
           
-          for SERVICE in "${SERVICES[@]}"; do
-            SERVICE=$(echo "$SERVICE" | xargs)  # trim whitespace
+          for service in "${SERVICES_ARRAY[@]}"; do
+            service=$(echo "$service" | xargs) # trim whitespace
             
             # ArgoCD Application manifest 경로
-            MANIFEST="k8s/argocd/apps/prod/${SERVICE}.yaml"
+            MANIFEST="k8s/argocd/apps/prod/${service}.yaml"
             
             if [ ! -f "$MANIFEST" ]; then
               echo "❌ Manifest file not found: ${MANIFEST}"
-              FAILED_SERVICES="${FAILED_SERVICES}${SERVICE} "
               continue
             fi
             
@@ -122,34 +136,30 @@ jobs:
             rm -f "${MANIFEST}.bak"
             
             echo ""
-            echo "=== Updated section for ${SERVICE} ==="
+            echo "=== Updated section for $service ==="
             grep -A 1 "name: image.tag" "$MANIFEST"
-            echo "======================================="
+            echo "=================================="
             echo ""
             
-            UPDATED_SERVICES="${UPDATED_SERVICES}${SERVICE} "
+            if [ -n "$UPDATED_SERVICES" ]; then
+              UPDATED_SERVICES="$UPDATED_SERVICES,$service"
+            else
+              UPDATED_SERVICES="$service"
+            fi
           done
           
+          echo "updated_services=$UPDATED_SERVICES" >> $GITHUB_OUTPUT
+          
           # 전체 변경사항 확인
-          echo "📋 All changes:"
           git diff
-          
-          # 결과를 output으로 저장
-          echo "updated_services=${UPDATED_SERVICES}" >> $GITHUB_OUTPUT
-          echo "failed_services=${FAILED_SERVICES}" >> $GITHUB_OUTPUT
-          
-          if [ -n "$FAILED_SERVICES" ]; then
-            echo "⚠️ Some services failed to update: ${FAILED_SERVICES}"
-          fi
 
       - name: Create PR or commit
-        id: create_pr
+        id: create-pr
         env:
           GH_TOKEN: ${{ secrets.GITOPS_PAT || github.token }}
         run: |
+          UPDATED_SERVICES="${{ steps.update-manifest.outputs.updated_services }}"
           TAG="${{ inputs.image_tag }}"
-          UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
-          SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
           
           if [ "${{ inputs.create_pr }}" = "true" ]; then
             BRANCH_NAME="deploy/multi-service-${TAG}-$(date +%s)"
@@ -157,30 +167,28 @@ jobs:
             # 새 브랜치 생성
             git checkout -b "$BRANCH_NAME"
             git add .
-            
-            # 커밋 메시지 생성
-            if [ $SERVICE_COUNT -eq 1 ]; then
-              git commit -m "🚀 [PROD] Deploy ${UPDATED_SERVICES// /} - ${TAG}"
-            else
-              git commit -m "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}
+            git commit -m "🚀 [PROD] Deploy Multiple Services - ${TAG}
 
-          Services:
-          $(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- /')"
-            fi
-            
+Services: ${UPDATED_SERVICES}"
             git push origin "$BRANCH_NAME"
             
             # PR body 생성
-            PR_BODY="## Production Deployment Request
+            PR_BODY="## Production Multi-Service Deployment Request
 
 **Image Tag:** \`${TAG}\`  
-**Services:** ${SERVICE_COUNT}
+**Updated Services:** \`${UPDATED_SERVICES}\`
 
-### Services to Deploy
-$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- **/' | sed 's/$/**/')
-
-### Updated Manifests
-$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed "s|^|- \`k8s/argocd/apps/prod/|" | sed 's|$|.yaml`|')
+### Services and Manifests
+"
+            
+            IFS=',' read -ra SERVICES_ARRAY <<< "$UPDATED_SERVICES"
+            for service in "${SERVICES_ARRAY[@]}"; do
+              service=$(echo "$service" | xargs)
+              PR_BODY="${PR_BODY}
+- **${service}**: \`prod/${service}:${TAG}\` → \`k8s/argocd/apps/prod/${service}.yaml\`"
+            done
+            
+            PR_BODY="${PR_BODY}
 
 ### Pre-deployment Checklist
 - [ ] Dev/Staging 테스트 완료
@@ -190,9 +198,19 @@ $(echo $UPDATED_SERVICES | tr ' ' '\n' | sed "s|^|- \`k8s/argocd/apps/prod/|" | 
 ### Deployment Steps
 1. 이 PR 리뷰 및 승인
 2. PR Merge
-3. ArgoCD UI에서 각 애플리케이션의 **Sync** 버튼 클릭:
-$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/   - **/' | sed 's/$/-prod**/')
+3. ArgoCD UI에서 각 서비스의 **-prod** 애플리케이션들을 **Sync**
 4. 배포 모니터링 (Discord 알림 확인)
+
+### ArgoCD Applications to Sync
+"
+            
+            for service in "${SERVICES_ARRAY[@]}"; do
+              service=$(echo "$service" | xargs)
+              PR_BODY="${PR_BODY}
+- \`${service}-prod\`"
+            done
+            
+            PR_BODY="${PR_BODY}
 
 ---
 ⚠️ **주의**: 자동 배포되지 않습니다. ArgoCD에서 수동 Sync 필요
@@ -201,7 +219,7 @@ Requested by: @${{ github.triggering_actor }} via Discord Bot"
             
             # PR 생성
             gh pr create \
-              --title "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}" \
+              --title "🚀 [PROD] Deploy Multiple Services - ${TAG}" \
               --body "$PR_BODY" \
               --base k8s-deploy-prod \
               --head "$BRANCH_NAME"
@@ -210,24 +228,24 @@ Requested by: @${{ github.triggering_actor }} via Discord Bot"
             PR_URL="https://github.com/${{ github.repository }}/pull/$(gh pr list --head $BRANCH_NAME --json number --jq '.[0].number')"
             
             echo "✅ PR created: ${PR_URL}"
-            echo "pr_url=${PR_URL}" >> $GITHUB_OUTPUT
+            echo "PR_URL=${PR_URL}" >> $GITHUB_OUTPUT
             
             echo ""
             echo "### 🔗 Next Steps" >> $GITHUB_STEP_SUMMARY
             echo "1. [Review the PR](${PR_URL})" >> $GITHUB_STEP_SUMMARY
             echo "2. Merge after approval" >> $GITHUB_STEP_SUMMARY
-            echo "3. Sync in ArgoCD" >> $GITHUB_STEP_SUMMARY
+            echo "3. Sync all services in ArgoCD" >> $GITHUB_STEP_SUMMARY
           else
-            # 직접 커밋
+            # 직접 커밋 (비권장)
             git add .
-            git commit -m "🚀 [PROD] Deploy ${SERVICE_COUNT} services - ${TAG}
+            git commit -m "🚀 [PROD] Deploy Multiple Services - ${TAG}
 
-Services:
-$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- /')
-
-Updated by: ${{ github.triggering_actor }} via Discord Bot"
+Services: ${UPDATED_SERVICES}
+Updated by: ${{ github.triggering_actor }} via Discord Bot
+Manual deployment trigger"
             git push origin k8s-deploy-prod
             echo "⚠️ Changes pushed directly to k8s-deploy-prod"
+            echo "Go to ArgoCD and manually sync all updated services"
           fi
 
       - name: Send Discord notification
@@ -236,27 +254,25 @@ Updated by: ${{ github.triggering_actor }} via Discord Bot"
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
           if [ -n "$DISCORD_WEBHOOK" ]; then
-            PR_URL="${{ steps.create_pr.outputs.pr_url }}"
-            UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
-            SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
-            SERVICE_LIST=$(echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/• /' | sed 's/$/\\n/' | tr -d '\n')
+            PR_URL="${{ steps.create-pr.outputs.PR_URL }}"
+            UPDATED_SERVICES="${{ steps.update-manifest.outputs.updated_services }}"
             
             curl -H "Content-Type: application/json" \
               -X POST \
               -d '{
                 "embeds": [{
-                  "title": "📦 Production Deployment PR Created",
-                  "description": "New production deployment PR has been created for '"${SERVICE_COUNT}"' service(s).",
+                  "title": "📦 Production Multi-Service Deployment PR Created",
+                  "description": "New production deployment PR has been created for multiple services.",
                   "color": 3447003,
                   "fields": [
                     {
                       "name": "🔧 Services",
-                      "value": "'"${SERVICE_LIST}"'",
+                      "value": "'"${UPDATED_SERVICES}"'",
                       "inline": false
                     },
                     {
                       "name": "🏷️ Image Tag", 
-                      "value": "`'"${{ inputs.image_tag }}"'`",
+                      "value": "'"${{ inputs.image_tag }}"'",
                       "inline": true
                     },
                     {
@@ -271,12 +287,12 @@ Updated by: ${{ github.triggering_actor }} via Discord Bot"
                     },
                     {
                       "name": "📋 Next Steps",
-                      "value": "1. Review PR\\n2. Merge after approval\\n3. Sync in ArgoCD\\n4. Monitor deployment",
+                      "value": "1. Review PR\\n2. Merge after approval\\n3. Sync all services in ArgoCD\\n4. Monitor deployment",
                       "inline": false
                     }
                   ],
                   "footer": {
-                    "text": "GitHub Actions • Production Deployment"
+                    "text": "GitHub Actions • Multi-Service Production Deployment"
                   },
                   "timestamp": "'"$(date -u +%Y-%m-%dT%H:%M:%S.000Z)"'"
                 }]
@@ -288,20 +304,31 @@ Updated by: ${{ github.triggering_actor }} via Discord Bot"
 
       - name: Deployment summary
         run: |
-          UPDATED_SERVICES="${{ steps.update_manifests.outputs.updated_services }}"
-          SERVICE_COUNT=$(echo $UPDATED_SERVICES | wc -w)
+          UPDATED_SERVICES="${{ steps.update-manifest.outputs.updated_services }}"
           
-          echo "## 🚀 Production Image Tag Update" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 Production Multi-Service Image Tag Update" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Services Updated:** ${SERVICE_COUNT}" >> $GITHUB_STEP_SUMMARY
+          echo "**Updated Services:** ${UPDATED_SERVICES}" >> $GITHUB_STEP_SUMMARY
           echo "**New Image Tag:** ${{ inputs.image_tag }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Updated Services:" >> $GITHUB_STEP_SUMMARY
-          echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/- **/' | sed 's/$/**/' >> $GITHUB_STEP_SUMMARY
+          echo "### 📦 ECR Images:" >> $GITHUB_STEP_SUMMARY
+          
+          IFS=',' read -ra SERVICES_ARRAY <<< "$UPDATED_SERVICES"
+          for service in "${SERVICES_ARRAY[@]}"; do
+            service=$(echo "$service" | xargs)
+            echo "- \`prod/${service}:${{ inputs.image_tag }}\`" >> $GITHUB_STEP_SUMMARY
+          done
+          
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📋 Next Steps:" >> $GITHUB_STEP_SUMMARY
           echo "1. ✅ Review and merge the PR" >> $GITHUB_STEP_SUMMARY
           echo "2. 🔄 Go to ArgoCD UI" >> $GITHUB_STEP_SUMMARY
-          echo "3. 🎯 Find and sync each service:" >> $GITHUB_STEP_SUMMARY
-          echo $UPDATED_SERVICES | tr ' ' '\n' | sed 's/^/   - **/' | sed 's/$/-prod**/' >> $GITHUB_STEP_SUMMARY
-          echo "4. 👀 Monitor deployment" >> $GITHUB_STEP_SUMMARY
+          echo "3. 🎯 Find and sync these applications:" >> $GITHUB_STEP_SUMMARY
+          
+          for service in "${SERVICES_ARRAY[@]}"; do
+            service=$(echo "$service" | xargs)
+            echo "   - **${service}-prod**" >> $GITHUB_STEP_SUMMARY
+          done
+          
+          echo "4. 🚀 Click **Sync** button for each" >> $GITHUB_STEP_SUMMARY
+          echo "5. 👀 Monitor deployment" >> $GITHUB_STEP_SUMMARY
