chore: .gitignore에 **/bin/ 추가
Java/Gradle IDE 빌드 출력물 디렉토리 무시

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,7 @@ coverage.html
 # ============================================
 .gradle/
 build/
+**/bin/
 BOOT-INF/
 out/
 !gradle/wrapper/gradle-wrapper.jar
