--- a/k8s/argocd/apps/prod/cluster-addons.yaml
+++ b/k8s/argocd/apps/prod/cluster-addons.yaml
@@ -1,31 +1,30 @@
 # =============================================================================
-# DB Init - ArgoCD Application
+# Cluster Addons - App of Apps
 # =============================================================================
-# RDS PostgreSQL 초기화 (데이터베이스 생성)
-# sync-wave: 2 (External Secrets 이후, 서비스 배포 전)
-
+# cluster-addons/ 디렉토리의 모든 addon Application을 관리
+# sync-wave: -6 (개별 addons보다 먼저 sync)
+# =============================================================================
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: db-init-prod
+  name: cluster-addons-prod
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "3"  # ExternalSecret(1) 이후, 서비스(5) 전
+    argocd.argoproj.io/sync-wave: "-6"  # addons보다 먼저 sync
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: wealist-prod
   source:
     repoURL: https://github.com/OrangesCloud/wealist-project-advanced-k8s.git
     targetRevision: k8s-deploy-prod
-    path: k8s/helm/charts/db-init
-    helm:
-      valueFiles:
-        - ../../../helm/environments/prod-db-init.yaml
+    path: k8s/argocd/apps/prod/cluster-addons
   destination:
     server: https://kubernetes.default.svc
-    namespace: wealist-prod
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
-      - CreateNamespace=true
+      - CreateNamespace=false
