--- a/k8s/argocd/projects/wealist-prod.yaml
+++ b/k8s/argocd/projects/wealist-prod.yaml
@@ -1,6 +1,9 @@
 # =============================================================================
 # ArgoCD AppProject - Production
 # =============================================================================
+# Cluster Addons 및 서비스 배포를 위한 프로젝트 설정
+# sync-wave 순서: addons (-5 ~ -1) → ESO/ClusterSecretStore (0-1) → Services (5)
+# =============================================================================
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
@@ -9,9 +12,16 @@ metadata:
 spec:
   description: Wealist Production Environment
 
-  # 허용된 소스 레포지토리
+  # 허용된 소스 레포지토리 (Git + Helm Charts)
   sourceRepos:
     - "https://github.com/OrangesCloud/wealist-project-advanced-k8s.git"
+    # Cluster Addons Helm Repos
+    - "https://aws.github.io/eks-charts"
+    - "https://charts.external-secrets.io"
+    - "https://charts.jetstack.io"
+    - "https://kubernetes.github.io/autoscaler"
+    - "https://kubernetes-sigs.github.io/external-dns"
+    - "https://kubernetes-sigs.github.io/metrics-server"
 
   # 허용된 배포 대상
   destinations:
@@ -21,13 +31,35 @@ spec:
       server: https://kubernetes.default.svc
     - namespace: external-secrets
       server: https://kubernetes.default.svc
+    - namespace: cert-manager
+      server: https://kubernetes.default.svc
+    - namespace: external-dns
+      server: https://kubernetes.default.svc
+    - namespace: kube-system
+      server: https://kubernetes.default.svc
+    - namespace: istio-system
+      server: https://kubernetes.default.svc
 
-  # 클러스터 레벨 리소스 허용 (External Secrets용)
+  # 클러스터 레벨 리소스 허용 (External Secrets, CRDs, RBAC 등)
   clusterResourceWhitelist:
     - group: ""
       kind: Namespace
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRoleBinding
     - group: external-secrets.io
       kind: ClusterSecretStore
+    - group: gateway.networking.k8s.io
+      kind: "*"
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+    - group: admissionregistration.k8s.io
+      kind: MutatingWebhookConfiguration
+    - group: apiregistration.k8s.io
+      kind: APIService
 
   # 네임스페이스 레벨 리소스 허용
   namespaceResourceWhitelist:
